style: fix desktop stats overlap by enforced spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,11 +458,14 @@ hr {
 }
 
 .hero .stats strong {
-  margin-right: 8px;
+  margin-right: 15px;
   color: #554c34;
   font-size: 44px;
   font-weight: 700;
-  line-height: 54px;
+  line-height: normal;
+  /* Fix potential line-height clipping */
+  display: inline-block;
+  /* Fix for block/spacing issues */
 }
 
 .hero .stats strong:nth-child(2) {
